Projeto/Compilador/tests/cases/ok/T40_OK_retorno_definido_por_F_.pas
program T40;
function F(x: integer): integer;
begin
  F := x + 1;
end;
begin
  writeln(F(2));
end.
