Projeto/Compilador/tests/cases/error/T23.pas
program T23;
var i: integer;
begin
  for i := 1.5 to 3 do
    writeln(i);
end.
